# adventofcode22

./: .gitignore  CMakeLists.txt
src/: ProjectConfig.hpp.in  day1.cpp  day2.cpp
